# generic_fighter

./: .tm_project.cache  GenericFighter.prj  GenericFighter.prj.bak  GenericFighter.pws  Makefile.am  README  configure.in
docs/: analise~  desc.txt~
levels/: level01.lev~
po/: POTFILES.in
sprite_editor/: frmTexto.dcu  frmTexto.xfm  frmTexto.~pas  frmTexto.~xfm  gfRect.dcu  gfRect.pas  gfRect.~pas  main.dcu  main.xfm  main.~pas  spreditor  spreditor.dpr  spreditor.~dpr
sprites/eduardo/: blls-of-fr01-flip.png.rect  create_transparents.sh~  sprite.txt  sprite.txt~
src/: Makefile  Makefile.am  Makefile.bak  Makefile.linux  Makefile.lnk  Makefile.windows  gfaction.c  gfaction.h  gfcommon.h  gfframe.bak  gfframe.c  gfframe.h  gfgameloop.bak  gfgameloop.c  gfgameloop.h  gfinput.c  gfinput.h  gfinputset.c  gfinputset.h  gfinputset_receiver_key1.bak  gfinputset_receiver_key1.c  gfinputset_receiver_key1.h  gfinputset_receiver_key2.c  gfinputset_receiver_key2.h  gflevel.c  gflevel.h  gfrect.bak  gfrect.c  gfrect.h  gfscreen.c  gfscreen.h  gfsprite.bak  gfsprite.c  gfsprite.h  main.bak  main.c  rect.c  rect.h  stdout.txt
util/: Makefile  Makefile~  create_class  create_class.c
