## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

CFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized -Wparentheses -Wtraditional -Wpointer-arith -Wmissing-prototypes\
	 -O1\
	 -g

bin_PROGRAMS = gfighter

gfighter_SOURCES = \
	main.c\
	gfaction.h\
	gfframe.c\
	gfgameloop.c\
	gfinput.c\
	gfinputset_receiver_key1.c\
	gfinputset_receiver_key1.h\
	gfrect.c\
	gfrect.h\
	rect.h\
	gfsprite.h\
	gfgameloop.h

gfighter_LDFLAGS = 

gfighter_LDADD = 

